@@ -1,4 +1,4 @@
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.2.0-0
+Requires: pupmod-simp-simplib >= 3.2.0
+Requires: pupmod-simp-simplib < 4.0.0
+Requires: pupmod-puppetlabs-stdlib >= 4.13.1
+Requires: pupmod-puppetlabs-stdlib < 5.0.0
