@@ -6,6 +6,7 @@ HOSTS:
       - master
     platform:   el-7-x86_64
     box:        centos/7
+    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -18,6 +19,7 @@ HOSTS:
       - client
     platform:   el-6-x86_64
     box:        centos/6
+    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -29,4 +31,5 @@ CONFIG:
   log_level: verbose
   type:      aio
   vagrant_memsize: 256
+  puppet_collection: puppet5
   # vb_gui: true
